# probably_insecure_password_manager

./: .gitignore  README.md  pyproject.toml
src/pass_manager/application/: app.py
src/pass_manager/core/: exceptions.py  header.py  vault.py
src/pass_manager/crypto/: crypto.py
src/pass_manager/storage/: storage.py
tests/: test_basics.py
